force-app/main/default/objects/FS_Flow_Analysis__c/FS_Flow_Analysis__c.object-meta.xml
<CustomObject>
    <label>Analysis</label>
    <nameField>
        <displayFormat>FA-{0000000000}</displayFormat>
        <label>Flow Analysis Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Analyses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>