force-app/main/default/objects/FS_Flow_Analysis__c/fields/Analysis_Data__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Data__c</fullName>
    <label>Analysis Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>