force-app/main/default/objects/FS_Flow_Analysis__c/fields/Analysis_Date__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Date__c</fullName>
    <label>Analysis Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>