force-app/main/default/objects/FS_Flow_Analysis__c/fields/Analysis_Type__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Type__c</fullName>
    <label>Analysis Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Data_Quality</fullName>
                <label>Data Quality</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>