force-app/main/default/objects/FS_Flow_Analysis__c/fields/Complexity_Score__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Score__c</fullName>
    <label>Complexity Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>