force-app/main/default/objects/FS_Flow_Analysis__c/fields/Flow_Run__c.field-meta.xml
<CustomField>
    <fullName>Flow_Run__c</fullName>
    <label>Flow Run</label>
    <referenceTo>FS_Flow_Run__c</referenceTo>
    <relationshipLabel>Flow Analyses</relationshipLabel>
    <relationshipName>Flow_Analyses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>